update print style & working title

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,7 +1,7 @@
 # Author settings
 author:
   name: Evan Jia
-  title: Node Developer
+  title: Web Developer
   address: Christchurch, New Zealand
   phone: +64-021-026-81846
   email: gogoout@gmail.com
