fix(word-break) fix word breaking issue in mobile

--- a/_data/info.yml
+++ b/_data/info.yml
@@ -14,7 +14,7 @@ author:
 workHistory:
   - work1:
     company: '[AllGoods Group Limited](https://allgoods.co.nz){:target="_blank"}'
-    location: Christchurch, New Zealand
+    location: Christchurch, NZ
     title: Senior Developer
     started: 2017
     duration: (2017 - CURRENT)
